hphp/hack/test/typecheck/readonly/shape_assign.php.exp
ERROR: File "shape_assign.php", line 24, characters 3-14:
This expression is readonly, its members cannot be modified (Parsing[1002])
ERROR: File "shape_assign.php", line 25, characters 3-14:
This expression is readonly, its members cannot be modified (Parsing[1002])
ERROR: File "shape_assign.php", line 27, characters 3-14:
This expression is readonly, its members cannot be modified (Parsing[1002])
